- Multi-tenant support (shared app server, separate databases)
- Visitor tracking
- ArtifactHit and ArtifactHitBin tracking for screen, screen-content,
  transition, service and entity (bin only)
- User preference handling
- Simplified sequenced ID API for both primary and secondary sequenced IDs
  and moved configuration to entity definition, and methods to EntityValue

Notable features not yet implemented:

- XML Screens
  - Screen form AJAX/DHTML for lookup
  - Screen form auto-complete for drop-down and lookup
  - Screen form field-layout support
  - Screen form client JS validation based on target transition service
    definition (define once, run on client and server)
  - Screen form-list pagination
  - Screen tree elements
  - Screen section-iterate pagination
  - Renderers for non-HTML output (XML, XSL-FO, CSV, etc, etc)
- Service Facade
  - Service runners for remote service calls (HTTP, JMS, RMI proxies)
  - Service runners for web service standards (XML-RPC, REST, JSON, etc)
  - Service mail handling (MCA rules)
  - Service async/scheduled max-retry in Quartz
- Entity Facade
  - Entity complex aliases in views
  - Database meta-data check/report against entity definitions
- ArtifactExecutionFacade for artifact stack tracking
- Artifact Authorization, Tar-pitting based on configuration in db
- WebApp event actions
- Auto-add lastUpdatedStamp (unless def says no), set on create/update
- Clean up JavaDoc/GroovyDoc comments and post to site
- Web Tools UI
  - Cache
  - Scheduler
  - Entity Data UI
  - SQL/Script Run
  - Artifact Info
  - Visit and Hit stats

===========================================================================
Release 1.0-preview2 - 01 Mar 2011
===========================================================================

With release 1.0-preview2 the Moqui Framework is now nearly complete and
has sufficient functionality to build a wide variety of functional and
useful enterprise, or less formal, applications. This release includes a