@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+This Work is in the public domain and is provided on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied,
+including, without limitation, any warranties or conditions of TITLE,
+NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR PURPOSE.
+You are solely responsible for determining the appropriateness of using
+this Work and assume any risks associated with your use of this Work.
+
+This Work includes contributions authored by David E. Jones, not as a
+"work for hire", who hereby disclaims any copyright to the same.
+-->
+<screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
+        include-child-content="true">
+    <subscreens default-item="ArtifactHitBins">
+    </subscreens>
+    <widgets>
+        <container-panel id="tools-app">
+            <panel-header>
+                <label text="Moqui Tools App" type="h2"/>
+            </panel-header>
+            <panel-center>
+                <subscreens-panel id="tools-app-subscreen" type="tab"/>
+            </panel-center>
+        </container-panel>
+    </widgets>
+</screen>
