@@ -19,6 +19,8 @@
         <!-- refer to the various app roots here -->
         <subscreens-item name="example" location="component://example/screen/ExampleApp.xml"
                          menu-title="Example" menu-index="8"/>
+        <subscreens-item name="tools" location="component://tools/screen/Tools.xml"
+                         menu-title="Tools" menu-index="9"/>
     </subscreens>
 
     <widgets>
